// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Client component should render a link 1`] = `
<p>
  <strong>
    With:
  </strong>
   
  <a
    href="https://client.com"
    translate="no"
  >
    Client
  </a>
</p>
`;

exports[`Client component should render a name 1`] = `
<p>
  <strong>
    With:
  </strong>
   
  <span
    translate="no"
  >
    Client
  </span>
</p>
`;

exports[`Client component should render correctly 1`] = `null`;
